--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -70,6 +70,19 @@ author_profile: true
     <li>
       <div class="pub-row" style="display: flex; align-items: center;">
         <div class="col-sm-3 abbr" style="flex: 0 0 40%; padding-right: 15px; padding-left: 15px;">
+          <img src="/images/UltrasonicScalpel.jpg" class="teaser img-fluid z-depth-1" style="width: 100%;">
+        </div>
+        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
+          <div class="title">Design and performance study of ultrasonic scalpel for vertebra cutting</div>
+          <div class="author">Undergraduate Thesis, directed by Prof. Fujun Wang</div>
+          <div class="periodical"><em>Dec. 2021 ~ Jun. 2022, Tianjin University</em></div>
+        </div>
+      </div>
+    </li>
+    
+    <li>
+      <div class="pub-row" style="display: flex; align-items: center;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 40%; padding-right: 15px; padding-left: 15px;">
           <img src="/images/soft_robot_drawing.jpg" class="teaser img-fluid z-depth-1" style="width: 100%;">
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
@@ -80,8 +93,6 @@ author_profile: true
       </div>
     </li>
 
-
-    <!-- Continue this structure for the rest of your projects -->
 
   </ul>
 </div>
