--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -10,7 +10,7 @@ author_profile: true
 
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 50%; padding-right: 15px; padding-left: 15px;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 45%; padding-right: 15px; padding-left: 15px;">
           <video autoplay loop muted playsinline style="width: 100%; height: auto; object-fit: cover;">
             <source src="/images/RoboticMilling.mp4" type="video/mp4">
             Your browser does not support the video tag.
@@ -32,7 +32,7 @@ author_profile: true
 
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 50%; padding-right: 15px; padding-left: 15px;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 45%; padding-right: 15px; padding-left: 15px;">
           <img src="/images/Func_GA.jpg" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
@@ -51,7 +51,7 @@ author_profile: true
     
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 50%; padding-right: 15px; padding-left: 15px;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 45%; padding-right: 15px; padding-left: 15px;">
           <img src="/images/Inconel718CuttingForceSim.gif" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
@@ -69,7 +69,7 @@ author_profile: true
 
     <li>
       <div class="pub-row" style="display: flex; align-items: center;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 50%; padding-right: 15px; padding-left: 15px;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 45%; padding-right: 15px; padding-left: 15px;">
           <img src="/images/UltrasonicScalpel.jpg" class="teaser img-fluid z-depth-1" style="width: 100%;">
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
@@ -82,7 +82,7 @@ author_profile: true
     
     <li>
       <div class="pub-row" style="display: flex; align-items: center;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 50%; padding-right: 15px; padding-left: 15px;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 45%; padding-right: 15px; padding-left: 15px;">
           <img src="/images/soft_robot_drawing.jpg" class="teaser img-fluid z-depth-1" style="width: 100%;">
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
@@ -100,5 +100,9 @@ author_profile: true
 <style>
   .title {
     font-weight: bold;
+  }
+
+   .pub-row {
+    margin-bottom: 10px; /* Adjust this value to control the space between each item */
   }
 </style>
