--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -37,7 +37,7 @@ author_profile: true
         </div>
         <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
           <div class="title">Functionalization and prediction of end milling surface topography based on a quantitative indicator of chatter and forced vibration</div>
-          <div class="author">Article under review: Milling Vibration quantification, Surface topography online reconstruction</div>
+          <div class="author">Article under review: Milling vibration quantification, Surface topography online reconstruction</div>
           <div class="periodical"><em>Oct. 2023 ~ Oct. 2024, Tsinghua University</em></div>
           (More demonstration and code will be updated soon!)
           <div class="links">
