--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -48,6 +48,25 @@ author_profile: true
         </div>
       </div>
     </li>
+
+    <li>
+      <div class="pub-row" style="display: flex; align-items: stretch;">
+        <div class="col-sm-3 abbr" style="flex: 0 0 45%; padding-right: 15px; padding-left: 15px;">
+          <img src="/images/RapidFD.jpg" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
+        </div>
+        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
+          <div class="title">A Rapid Method to Quantify High-Frequency-Dominant Signals Based on Fixed-Interval Fractal Dimension</div>
+          <div class="author">Article accepted: Self-excited vibration (chatter) detection, Fractal dimension</div>
+          <div class="periodical"><em>Jan. 2024 ~ Jul. 2024, Tsinghua University</em></div>
+          (More demonstration and code will be updated soon!)
+          <div class="links">
+<!--             <a href="https://drive.google.com/file/d/1rEk7m628LLQmik8QQDjR7N0RCjglH2Nq/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a> -->
+<!--             <a href="https://github.com/JunShao0104/Loc-NeRF-plus" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
+<!--             <a href="https://www.youtube.com/watch?v=g6yx-9psMI4" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Video</a> -->
+          </div>
+        </div>
+      </div>
+    </li>
     
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
