--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -60,7 +60,7 @@ author_profile: true
           <div class="periodical"><em>Jan. 2024 ~ Jul. 2024, Tsinghua University</em></div>
           (More demonstration and code will be updated soon!)
           <div class="links">
-<!--             <a href="https://drive.google.com/file/d/1rEk7m628LLQmik8QQDjR7N0RCjglH2Nq/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a> -->
+                 <a href="https://doi.org/10.3390/fractalfract8080455" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:14px;">Paper</a>
 <!--             <a href="https://github.com/JunShao0104/Loc-NeRF-plus" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
 <!--             <a href="https://www.youtube.com/watch?v=g6yx-9psMI4" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Video</a> -->
           </div>
@@ -79,7 +79,7 @@ author_profile: true
           <div class="periodical"><em>Sep. 2022 ~ Dec. 2022, Tsinghua University</em></div>
           (More demonstration and code will be updated soon!)
           <div class="links">
-            <a href="https://drive.google.com/file/d/12mw5b99At_WTzta6cG_AqMIt4Da1wsAn/view?usp=drive_link" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Slides</a>
+            <a href="https://drive.google.com/file/d/12mw5b99At_WTzta6cG_AqMIt4Da1wsAn/view?usp=drive_link" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:14px;">Slides</a>
 <!--             <a href="https://github.com/wdliu356/Automatic-Parking/tree/real_h_astar" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
           </div>
         </div>
