--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -10,13 +10,13 @@ author_profile: true
 
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 45%; padding-right: 15px; padding-left: 15px;">
-          <video autoplay loop muted playsinline style="width: 100%; height: auto; object-fit: cover;">
+        <div class="col-sm-3 abbr aspect-ratio-container">
+          <video autoplay loop muted playsinline class="aspect-ratio-content">
             <source src="/images/RoboticMilling.mp4" type="video/mp4">
             Your browser does not support the video tag.
           </video>
         </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
+        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: flex-start;">
           <div class="title">Robotic Milling System Construction</div>
           <div class="author">0.3 mm average absolute error, motion command delay under 7 ms on ABB’s PC SDK application</div>
           <div class="periodical"><em>Sep. 2023 ~ Oct. 2024, Tsinghua University</em></div>
@@ -32,10 +32,10 @@ author_profile: true
 
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 45%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/Func_GA.jpg" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
+        <div class="col-sm-3 abbr aspect-ratio-container">
+          <img src="/images/Func_GA.jpg" class="aspect-ratio-content">
         </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
+        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: flex-start;">
           <div class="title">Functionalization and prediction of end milling surface topography based on a quantitative indicator of chatter and forced vibration</div>
           <div class="author">Article under review: Milling vibration quantification, Surface topography online reconstruction</div>
           <div class="periodical"><em>Oct. 2023 ~ Oct. 2024, Tsinghua University</em></div>
@@ -51,10 +51,10 @@ author_profile: true
 
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 45%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/RapidFD.jpg" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
+        <div class="col-sm-3 abbr aspect-ratio-container">
+          <img src="/images/RapidFD.png" class="aspect-ratio-content">
         </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
+        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: flex-start;">
           <div class="title">A Rapid Method to Quantify High-Frequency-Dominant Signals Based on Fixed-Interval Fractal Dimension</div>
           <div class="author">Article accepted: Self-excited vibration (chatter) detection, Fractal dimension</div>
           <div class="periodical"><em>Jan. 2024 ~ Jul. 2024, Tsinghua University</em></div>
@@ -70,10 +70,10 @@ author_profile: true
     
     <li>
       <div class="pub-row" style="display: flex; align-items: stretch;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 45%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/Inconel718CuttingForceSim.gif" class="teaser img-fluid z-depth-1" style="width: 100%; height: auto; object-fit: cover;">
+        <div class="col-sm-3 abbr aspect-ratio-container">
+          <img src="/images/Inconel718CuttingForceSim.gif" class="aspect-ratio-content">
         </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: center;">
+        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: flex-start;">
           <div class="title">Thermomechanical simulation of Nickel-based Super Alloy(Inconel 718) using Abaqus</div>
           <div class="author">Course: Finite Element Analysis, directed by Dr. Feng Feng</div>
           <div class="periodical"><em>Sep. 2022 ~ Dec. 2022, Tsinghua University</em></div>
@@ -88,10 +88,10 @@ author_profile: true
 
     <li>
       <div class="pub-row" style="display: flex; align-items: center;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 45%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/UltrasonicScalpel.jpg" class="teaser img-fluid z-depth-1" style="width: 100%;">
+        <div class="col-sm-3 abbr aspect-ratio-container">
+          <img src="/images/UltrasonicScalpel.jpg" class="aspect-ratio-content">
         </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
+        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: flex-start;">
           <div class="title">Design and performance study of ultrasonic scalpel for vertebra cutting</div>
           <div class="author">Undergraduate Thesis, directed by Prof. Fujun Wang</div>
           <div class="periodical"><em>Dec. 2021 ~ Jun. 2022, Tianjin University</em></div>
@@ -101,10 +101,10 @@ author_profile: true
     
     <li>
       <div class="pub-row" style="display: flex; align-items: center;">
-        <div class="col-sm-3 abbr" style="flex: 0 0 45%; padding-right: 15px; padding-left: 15px;">
-          <img src="/images/soft_robot_drawing.jpg" class="teaser img-fluid z-depth-1" style="width: 100%;">
+        <div class="col-sm-3 abbr aspect-ratio-container">
+          <img src="/images/soft_robot_drawing.jpg" class="aspect-ratio-content">
         </div>
-        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px;">
+        <div class="col-sm-9" style="flex: 1; padding-right: 15px; padding-left: 20px; display: flex; flex-direction: column; justify-content: flex-start;">
           <div class="title">Design and Manufacturing of Soft Manipulator with Compound Structure</div>
           <div class="author">Undergraduate Entrepreneurship Project, directed by Prof. Fujun Wang</div>
           <div class="periodical"><em>May. 2020 ~ May. 2021, Tianjin University</em></div>
@@ -123,5 +123,22 @@ author_profile: true
 
    .pub-row {
     margin-bottom: 20px; /* Adjust this value to control the space between each item */
+  }
+
+    /* Aspect ratio container for consistent size */
+  .aspect-ratio-container {
+    position: relative;
+    width: 100%;
+    padding-bottom: 56.25%; /* This gives a 16:9 aspect ratio */
+    overflow: hidden;
+  }
+
+  .aspect-ratio-content {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover; /* Ensures the content fits the container and keeps its aspect ratio */
   }
 </style>
