--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -87,7 +87,7 @@ author_profile: true
     </li>
 
     <li>
-      <div class="pub-row" style="display: flex; align-items: center;">
+      <div class="pub-row" style="display: flex; align-items: stretch;">
         <div class="image-container">
           <img src="/images/UltrasonicScalpel.jpg" class="image-content">
         </div>
@@ -100,7 +100,7 @@ author_profile: true
     </li>
     
     <li>
-      <div class="pub-row" style="display: flex; align-items: center;">
+      <div class="pub-row" style="display: flex; align-items: stretch;">
         <div class="image-container">
           <img src="/images/soft_robot_drawing.jpg" class="image-content">
         </div>
@@ -128,8 +128,8 @@ author_profile: true
     /* Aspect ratio container for consistent size */
   .image-container {
     position: relative;
-    width: 300px; /* Fixed width */
-    height: 200px; /* Fixed height */
+    width: 400px; /* Fixed width */
+    height: 225px; /* Fixed height */
     overflow: hidden;
   }
 
@@ -139,7 +139,7 @@ author_profile: true
     left: 0;
     width: 100%;
     height: 100%;
-    object-fit: cover; /* Ensures the content fits the container and keeps its aspect ratio */
+    object-fit: contain; /* Ensures the content fits the container and keeps its aspect ratio */
   }
 
     .text-container {
