--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -122,32 +122,39 @@ author_profile: true
   }
 
    .pub-row {
-    margin-bottom: 20px; /* Adjust this value to control the space between each item */
-  }
-
-    /* Aspect ratio container for consistent size */
-  .image-container {
-    position: relative;
-    width: 400px; /* Fixed width */
-    height: 225px; /* Fixed height */
-    overflow: hidden;
-  }
-
-  .image-content {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    object-fit: contain; /* Ensures the content fits the container and keeps its aspect ratio */
-  }
-
-    .text-container {
-    flex: 1;
-    padding-right: 15px;
-    padding-left: 20px;
     display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
+    align-items: flex-start; /* Align both containers at the top */
+    margin-bottom: 20px; /* Space between items */
   }
+
+  /* Image container */
+  .image-container {
+      position: relative;
+      width: 400px; /* Fixed width */
+      height: auto; /* Allow the height to be dynamic based on content */
+      flex-grow: 1; /* Allow the image container to stretch with the text container */
+      overflow: hidden;
+      display: flex;
+      justify-content: flex-start; /* Align the content at the top */
+  }
+
+  /* Image content */
+  .image-content {
+      width: 100%;
+      height: 100%;
+      object-fit: contain; /* Ensure the image/video fits the container without cropping */
+      align-self: flex-start; /* Align the image content to the top */
+  }
+
+  /* Text container */
+  .text-container {
+      flex: 1;
+      padding-right: 15px;
+      padding-left: 20px;
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start; /* Align the text container content at the top */
+      align-self: flex-start; /* Ensure the text container starts from the top */
+  }
+  
 </style>
