--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -130,7 +130,7 @@ author_profile: true
   /* Image container */
   .image-container {
       position: relative;
-      width: 400px; /* Fixed width */
+      width: 300px; /* Fixed width */
       height: auto; /* Allow the height to be dynamic based on content */
       flex-grow: 1; /* Allow the image container to stretch with the text container */
       overflow: hidden;
@@ -141,7 +141,7 @@ author_profile: true
   /* Image content */
   .image-content {
       width: 100%;
-      height: 100%;
+      height: auto;
       object-fit: contain; /* Ensure the image/video fits the container without cropping */
       align-self: flex-start; /* Align the image content to the top */
   }
