--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -9,7 +9,7 @@ author_profile: true
   <ul class="bibliography" style="list-style: none; padding-left: 0;">
 
     <li>
-      <div class="pub-row" style="display: flex; align-items: stretch;">
+      <div class="pub-row">
         <div class="image-container">
           <video autoplay loop muted playsinline class="image-content">
             <source src="/images/RoboticMilling.mp4" type="video/mp4">
@@ -31,7 +31,7 @@ author_profile: true
     </li>
 
     <li>
-      <div class="pub-row" style="display: flex; align-items: stretch;">
+      <div class="pub-row">
         <div class="image-container">
           <img src="/images/Func_GA.jpg" class="image-content">
         </div>
@@ -50,7 +50,7 @@ author_profile: true
     </li>
 
     <li>
-      <div class="pub-row" style="display: flex; align-items: stretch;">
+      <div class="pub-row">
         <div class="image-container">
           <img src="/images/RapidFD.png" class="image-content">
         </div>
@@ -69,7 +69,7 @@ author_profile: true
     </li>
     
     <li>
-      <div class="pub-row" style="display: flex; align-items: stretch;">
+      <div class="pub-row">
         <div class="image-container">
           <img src="/images/Inconel718CuttingForceSim.gif" class="image-content">
         </div>
@@ -87,7 +87,7 @@ author_profile: true
     </li>
 
     <li>
-      <div class="pub-row" style="display: flex; align-items: stretch;">
+      <div class="pub-row">
         <div class="image-container">
           <img src="/images/UltrasonicScalpel.jpg" class="image-content">
         </div>
@@ -100,7 +100,7 @@ author_profile: true
     </li>
     
     <li>
-      <div class="pub-row" style="display: flex; align-items: stretch;">
+      <div class="pub-row">
         <div class="image-container">
           <img src="/images/soft_robot_drawing.jpg" class="image-content">
         </div>
@@ -130,7 +130,7 @@ author_profile: true
   /* Image container */
   .image-container {
       position: relative;
-      width: 300px; /* Fixed width */
+      width: 270px; /* Fixed width */
       height: auto; /* Allow the height to be dynamic based on content */
       flex-grow: 1; /* Allow the image container to stretch with the text container */
       overflow: hidden;
