--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -56,7 +56,7 @@ author_profile: true
         </div>
         <div class="text-container">
           <div class="title">A Rapid Method to Quantify High-Frequency-Dominant Signals Based on Fixed-Interval Fractal Dimension</div>
-          <div class="author">Article accepted: Self-excited vibration (chatter) detection, Fractal dimension</div>
+          <div class="author">Article accepted: Self-excited vibration (chatter) online detection, Fractal dimension</div>
           <div class="periodical"><em>Jan. 2024 ~ Jul. 2024, Tsinghua University</em></div>
           (More demonstration and code will be updated soon!)
           <div class="links">
