--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -17,7 +17,7 @@ author_profile: true
           </video>
         </div>
         <div class="text-container">
-          <div class="title">Robotic Milling System Construction</div>
+          <div class="title">Robotic milling system construction</div>
           <div class="author">0.3 mm average absolute error, motion command delay under 7 ms on ABB’s PC SDK application</div>
           <div class="periodical"><em>Sep. 2023 ~ Oct. 2024, Tsinghua University</em></div>
           (More demonstration and code will be updated soon!)
@@ -55,7 +55,7 @@ author_profile: true
           <img src="/images/RapidFD.png" class="image-content">
         </div>
         <div class="text-container">
-          <div class="title">A Rapid Method to Quantify High-Frequency-Dominant Signals Based on Fixed-Interval Fractal Dimension</div>
+          <div class="title">A rapid method to quantify high-frequency-dominant signals based on fixed-interval fractal dimension</div>
           <div class="author">Article accepted: Self-excited vibration (chatter) online detection, Fractal dimension</div>
           <div class="periodical"><em>Jan. 2024 ~ Jul. 2024, Tsinghua University</em></div>
           (More demonstration and code will be updated soon!)
@@ -74,7 +74,7 @@ author_profile: true
           <img src="/images/Inconel718CuttingForceSim.gif" class="image-content">
         </div>
         <div class="text-container">
-          <div class="title">Thermomechanical simulation of Nickel-based Super Alloy(Inconel 718) using Abaqus</div>
+          <div class="title">Thermomechanical cutting simulation of nickel-based super alloy (Inconel 718) using Abaqus</div>
           <div class="author">Course: Finite Element Analysis, directed by Dr. Feng Feng</div>
           <div class="periodical"><em>Sep. 2022 ~ Dec. 2022, Tsinghua University</em></div>
           (More demonstration and code will be updated soon!)
@@ -105,7 +105,7 @@ author_profile: true
           <img src="/images/soft_robot_drawing.jpg" class="image-content">
         </div>
         <div class="text-container">
-          <div class="title">Design and Manufacturing of Soft Manipulator with Compound Structure</div>
+          <div class="title">Design and fabrication of soft manipulator with compound structure</div>
           <div class="author">Undergraduate Entrepreneurship Project, directed by Prof. Fujun Wang</div>
           <div class="periodical"><em>May. 2020 ~ May. 2021, Tianjin University</em></div>
         </div>
