--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -98,6 +98,19 @@ author_profile: true
         </div>
       </div>
     </li>
+
+    <li>
+      <div class="pub-row">
+        <div class="image-container">
+          <img src="/images/CubeSolver.gif" class="image-content">
+        </div>
+        <div class="text-container">
+          <div class="title">Make the fastest robotic gripper to solve Rubik’s Cube (27.717 seconds solved)</div>
+          <div class="author">4th China University Intelligent Robot Creative Competition</div>
+          <div class="periodical"><em>Jun. 2021 ~ Aug. 2021, Tianjin University</em></div>
+        </div>
+      </div>
+    </li>
     
     <li>
       <div class="pub-row">
@@ -124,13 +137,13 @@ author_profile: true
    .pub-row {
     display: flex;
     align-items: flex-start; /* Align both containers at the top */
-    margin-bottom: 20px; /* Space between items */
+    margin-bottom: 30px; /* Space between items */
   }
 
   /* Image container */
   .image-container {
       position: relative;
-      width: 180px; /* Fixed width */
+      width: 130px; /* Fixed width */
       height: auto; /* Allow the height to be dynamic based on content */
       flex-grow: 1; /* Allow the image container to stretch with the text container */
       overflow: hidden;
