--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -143,8 +143,8 @@ author_profile: true
   /* Image container */
   .image-container {
       position: relative;
-      width: 400px; /* Fixed width */
-      height: 225px; /* Allow the height to be dynamic based on content */
+      width: 100px; /* Fixed width */
+      height: auto; /* Allow the height to be dynamic based on content */
       flex-grow: 1; /* Allow the image container to stretch with the text container */
       overflow: hidden;
       display: flex;
