--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -153,8 +153,8 @@ author_profile: true
 
   /* Image content */
   .image-content {
-      width: auto;
-      height: 100%;
+      width: 100%;
+      height: auto;
       object-fit: contain; /* Ensure the image/video fits the container without cropping */
       align-self: flex-start; /* Align the image content to the top */
   }
