--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -11,10 +11,11 @@ author_profile: true
     <li>
       <div class="pub-row">
         <div class="image-container">
-          <video autoplay loop muted playsinline class="image-content">
+               <img src="/images/RoboticMilling.gif" class="image-content">
+<!--           <video autoplay loop muted playsinline class="image-content">
             <source src="/images/RoboticMilling.mp4" type="video/mp4">
             Your browser does not support the video tag.
-          </video>
+          </video> -->
         </div>
         <div class="text-container">
           <div class="title">Robotic milling system construction</div>
