--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -161,6 +161,7 @@ author_profile: true
 
   /* Text container */
   .text-container {
+      flex: 1;
       padding-right: 0px;
       padding-left: 20px;
       display: flex;
