--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -155,6 +155,8 @@ author_profile: true
   .image-content {
       width: 100%;
       height: auto;
+      border-radius: 15px; /* Rounded corners, adjust the radius to your preference */
+      box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.2); /* Optional: Adds a soft shadow around the
       object-fit: contain; /* Ensure the image/video fits the container without cropping */
       align-self: flex-start; /* Align the image content to the top */
   }
