--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -96,6 +96,7 @@ author_profile: true
           <div class="title">Design and performance study of ultrasonic scalpel for vertebra cutting</div>
           <div class="author">Undergraduate Thesis, directed by Prof. Fujun Wang</div>
           <div class="periodical"><em>Dec. 2021 ~ Jun. 2022, Tianjin University</em></div>
+          (More demonstration and code will be updated soon!)
         </div>
       </div>
     </li>
@@ -109,6 +110,7 @@ author_profile: true
           <div class="title">Make the fastest robotic gripper to solve Rubik’s Cube (27.717 seconds solved)</div>
           <div class="author">4th China University Intelligent Robot Creative Competition</div>
           <div class="periodical"><em>Jun. 2021 ~ Aug. 2021, Tianjin University</em></div>
+          (More demonstration and code will be updated soon!)
         </div>
       </div>
     </li>
@@ -122,6 +124,7 @@ author_profile: true
           <div class="title">Design and fabrication of soft manipulator with compound structure</div>
           <div class="author">Undergraduate Entrepreneurship Project, directed by Prof. Fujun Wang</div>
           <div class="periodical"><em>May. 2020 ~ May. 2021, Tianjin University</em></div>
+          (More demonstration and code will be updated soon!)
         </div>
       </div>
     </li>
