--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -20,7 +20,7 @@ author_profile: true
         <div class="text-container">
           <div class="title">Robotic milling system construction</div>
           <div class="author">0.3 mm average absolute error, motion command delay under 7 ms on ABB’s PC SDK application</div>
-          <div class="periodical"><em>Sep. 2023 ~ Oct. 2024, Tsinghua University</em></div>
+          <div class="periodical"><em>Nov. 2023 ~ Present, Tsinghua University</em></div>
           (More demonstration and code will be updated soon!)
           <div class="links">
 <!--             <a href="https://drive.google.com/file/d/1rEk7m628LLQmik8QQDjR7N0RCjglH2Nq/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a> -->
@@ -39,7 +39,7 @@ author_profile: true
         <div class="text-container">
           <div class="title">Functionalization and prediction of end milling surface topography based on a quantitative indicator of chatter and forced vibration</div>
           <div class="author">Article under review: Milling vibration quantification, Surface topography online reconstruction</div>
-          <div class="periodical"><em>Oct. 2023 ~ Oct. 2024, Tsinghua University</em></div>
+          <div class="periodical"><em>Jun. 2023 ~ Oct. 2024, Tsinghua University</em></div>
           (More demonstration and code will be updated soon!)
           <div class="links">
 <!--             <a href="https://drive.google.com/file/d/1rEk7m628LLQmik8QQDjR7N0RCjglH2Nq/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a> -->
@@ -50,6 +50,7 @@ author_profile: true
       </div>
     </li>
 
+    
     <li>
       <div class="pub-row">
         <div class="image-container">
@@ -62,6 +63,25 @@ author_profile: true
           (More demonstration and code will be updated soon!)
           <div class="links">
                  <a href="https://doi.org/10.3390/fractalfract8080455" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:14px;">Paper</a>
+<!--             <a href="https://github.com/JunShao0104/Loc-NeRF-plus" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
+<!--             <a href="https://www.youtube.com/watch?v=g6yx-9psMI4" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Video</a> -->
+          </div>
+        </div>
+      </div>
+    </li>
+
+    <li>
+      <div class="pub-row">
+        <div class="image-container">
+          <img src="/images/OpticalGrating.jpg" class="image-content">
+        </div>
+        <div class="text-container">
+          <div class="title">Fabrication of blazed grating by ultrasonic machining</div>
+          <div class="author">Infrared (1–5 µm) with ~50–70% diffraction efficiency applications </div>
+          <div class="periodical"><em>Nov. 2022 ~ Apr. 2023, Tsinghua University</em></div>
+          (More demonstration and code will be updated soon!)
+          <div class="links">
+<!--             <a href="https://drive.google.com/file/d/1rEk7m628LLQmik8QQDjR7N0RCjglH2Nq/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a> -->
 <!--             <a href="https://github.com/JunShao0104/Loc-NeRF-plus" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
 <!--             <a href="https://www.youtube.com/watch?v=g6yx-9psMI4" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Video</a> -->
           </div>
