--- a/_pages/projects.html
+++ b/_pages/projects.html
@@ -70,7 +70,7 @@ author_profile: true
       </div>
     </li>
 
-<!--     <li>
+     <li>
       <div class="pub-row">
         <div class="image-container">
           <img src="/images/OpticalGrating.jpg" class="image-content">
@@ -80,14 +80,14 @@ author_profile: true
           <div class="author">Infrared (1–5 µm) with ~50–70% diffraction efficiency applications </div>
           <div class="periodical"><em>Nov. 2022 ~ Apr. 2023, Tsinghua University</em></div>
           (More demonstration and code will be updated soon!)
-          <div class="links"> -->
+          <div class="links">
 <!--             <a href="https://drive.google.com/file/d/1rEk7m628LLQmik8QQDjR7N0RCjglH2Nq/view?usp=sharing" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Report</a> -->
 <!--             <a href="https://github.com/JunShao0104/Loc-NeRF-plus" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Code</a> -->
 <!--             <a href="https://www.youtube.com/watch?v=g6yx-9psMI4" class="btn btn-sm z-depth-0" role="button" target="_blank" style="font-size:12px;">Video</a> -->
-<!--           </div>
+           </div>
         </div>
       </div>
-    </li> -->
+    </li> 
     
     <li>
       <div class="pub-row">
